--- a/model.ipynb
+++ b/model.ipynb
@@ -139,18 +139,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Feature Engineering"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Lag features"
    ]
@@ -159,8 +155,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -175,8 +170,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -188,8 +182,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -207,8 +200,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -227,8 +219,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -454,8 +445,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -472,8 +462,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -504,8 +493,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -535,8 +523,7 @@
    "cell_type": "code",
    "execution_count": 120,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -558,9 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## canal_entrada (Label)"
    ]
@@ -569,8 +554,7 @@
    "cell_type": "code",
    "execution_count": 121,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -581,8 +565,7 @@
    "cell_type": "code",
    "execution_count": 122,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -599,8 +582,7 @@
    "cell_type": "code",
    "execution_count": 123,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -632,9 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## pais_residencia"
    ]
@@ -643,8 +623,7 @@
    "cell_type": "code",
    "execution_count": 124,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -659,9 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Others"
    ]
@@ -670,8 +647,7 @@
    "cell_type": "code",
    "execution_count": 125,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -694,8 +670,7 @@
    "cell_type": "code",
    "execution_count": 126,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -706,8 +681,7 @@
    "cell_type": "code",
    "execution_count": 127,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -719,8 +693,7 @@
    "cell_type": "code",
    "execution_count": 128,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -732,8 +705,7 @@
    "cell_type": "code",
    "execution_count": 129,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -745,8 +717,7 @@
    "cell_type": "code",
    "execution_count": 130,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -769,8 +740,7 @@
    "cell_type": "code",
    "execution_count": 131,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -781,8 +751,7 @@
    "cell_type": "code",
    "execution_count": 132,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -796,46 +765,29 @@
    "cell_type": "code",
    "execution_count": 133,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df_train[\"renta\"].fillna(1.0, inplace=True)\n",
-    "df_test[\"renta\"].fillna(1.0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "df_test[\"renta\"] = pd.to_numeric(df_test[\"renta\"], errors='coerce')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "df_train[\"renta_log\"] = df_train[\"renta\"].map(math.log)\n",
-    "df_test[\"renta_log\"] = df_test[\"renta\"].map(math.log)"
+    "df_test[\"renta\"]   = pd.to_numeric(df_test[\"renta\"], errors=\"coerce\")\n",
+    "unique_prov = df_test[df_test.cod_prov.notnull()].cod_prov.unique()\n",
+    "grouped = df_test.groupby(\"cod_prov\")[\"renta\"].median()\n",
+    "\n",
+    "def impute_renta(df):\n",
+    "    df[\"renta\"]   = pd.to_numeric(df[\"renta\"], errors=\"coerce\")       \n",
+    "    for cod in unique_prov:\n",
+    "        df.loc[df['cod_prov']==cod,['renta']] = df.loc[df['cod_prov']==cod,['renta']].fillna({'renta':grouped[cod]}).values\n",
+    "    df.renta.fillna(df_test[\"renta\"].median(), inplace=True)\n",
+    "    \n",
+    "impute_renta(df_train)\n",
+    "impute_renta(df_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 136,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -853,8 +805,7 @@
    "cell_type": "code",
    "execution_count": 137,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -872,8 +823,7 @@
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -890,8 +840,7 @@
    "cell_type": "code",
    "execution_count": 139,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -910,8 +859,7 @@
    "cell_type": "code",
    "execution_count": 140,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -926,8 +874,7 @@
    "cell_type": "code",
    "execution_count": 141,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -948,8 +895,7 @@
    "cell_type": "code",
    "execution_count": 142,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -961,8 +907,7 @@
    "cell_type": "code",
    "execution_count": 143,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -975,8 +920,7 @@
    "cell_type": "code",
    "execution_count": 144,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1035,8 +979,7 @@
    "cell_type": "code",
    "execution_count": 145,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1050,8 +993,7 @@
    "cell_type": "code",
    "execution_count": 146,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
